Add my_script.js and write a function

--- a/table.html
+++ b/table.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <title>Table</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
+  <script type ="text/javascript" src ="js/jquery-3.2.1.js"></script>
+  <script type ="text/javascript" src ="js/my_script.js"></script>
+  <!-- <script
+  src="https://code.jquery.com/jquery-3.6.3.js"
+  integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+  crossorigin="anonymous"></script> -->
   <style>
     td, th {
       width: 5rem;
