Manipulate with odd and even selector

--- a/table.html
+++ b/table.html
@@ -11,6 +11,12 @@
   integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
   crossorigin="anonymous"></script> -->
   <style>
+    
+    .underline{text-decoration: underline;
+    }
+    .border{
+        border: solid 2 px #ccc;
+    }
     td, th {
       width: 5rem;
       height: 2rem;
